@@ -162,3 +162,6 @@
 	in 'src/lwnetrouterd/router_breakaway.cpp'.
 2016-12-08 Fred Gleason <fredg@paravelsystems.com>
 	* Added a gpio_delay_test(1) test harness in 'src/tests/'.
+2016-12-08 Fred Gleason <fredg@paravelsystems.com>
+	* Added a fudge-factor in the SetpointBytes() function in
+	'src/lwnetrouterd/router_hpiaudio.cpp'.
